examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__assignments@a  1.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Assignment(
                            Assignment {
                                right: Some(
                                    Expression(
                                        PrimaryExpression(
                                            Integer(
                                                Integer {
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                    ),
                                ),
                                Type: None,
                                left: Pattern(
                                    Identifier(
                                        Identifier {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                [RANGE]
                            },
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
