examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__assignments@a, b = 1, 2.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Assignment(
                            Assignment {
                                right: Some(
                                    ExpressionList(
                                        ExpressionList {
                                            children: [
                                                PrimaryExpression(
                                                    Integer(
                                                        Integer {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                                PrimaryExpression(
                                                    Integer(
                                                        Integer {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                    ),
                                ),
                                Type: None,
                                left: PatternList(
                                    PatternList {
                                        children: [
                                            Identifier(
                                                Identifier {
                                                    [RANGE]
                                                },
                                            ),
                                            Identifier(
                                                Identifier {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                [RANGE]
                            },
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
