examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__assignments_with_type_annotation@tailleaves ListLeaf  .snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Assignment(
                            Assignment {
                                right: Some(
                                    Expression(
                                        PrimaryExpression(
                                            List(
                                                List {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                    ),
                                ),
                                Type: Some(
                                    Type {
                                        children: GenericType(
                                            GenericType {
                                                children: [
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                    TypeParameter(
                                                        TypeParameter {
                                                            children: [
                                                                Type {
                                                                    children: Expression(
                                                                        PrimaryExpression(
                                                                            Identifier(
                                                                                Identifier {
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                        ),
                                                                    ),
                                                                    [RANGE]
                                                                },
                                                            ],
                                                            [RANGE]
                                                        },
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                                left: Pattern(
                                    Identifier(
                                        Identifier {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                [RANGE]
                            },
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
