examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__assignments_with_type_annotations.snap
---
source: src/tests/corpus/expressions.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 30,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 2,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
        },
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 29,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 28,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        Assignment(
            Assignment {
                right: Some(
                    AstNodeId {
                        id: 10,
                        _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_ExpressionList_PatternList_Yield>,
                    },
                ),
                left: AstNodeId {
                    id: 3,
                    _marker: PhantomData<ast_python::generated::Pattern_PatternList>,
                },
                Type: Some(
                    AstNodeId {
                        id: 4,
                        _marker: PhantomData<ast_python::generated::Type>,
                    },
                ),
                _range: Range {
                    start_byte: 1,
                    end_byte: 29,
                    start_point: Point {
                        row: 1,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 28,
                    },
                },
                _id: 2,
                _parent: Some(
                    1,
                ),
            },
        ),
        Pattern(
            Identifier(
                Identifier {
                    _range: Range {
                        start_byte: 1,
                        end_byte: 12,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 11,
                        },
                    },
                    _id: 3,
                    _parent: Some(
                        2,
                    ),
                },
            ),
        ),
        Type {
            children: AstNodeId {
                id: 5,
                _marker: PhantomData<ast_python::generated::ConstrainedType_Expression_GenericType_MemberType_SplatType_UnionType>,
            },
            _range: Range {
                start_byte: 14,
                end_byte: 24,
                start_point: Point {
                    row: 1,
                    column: 13,
                },
                end_point: Point {
                    row: 1,
                    column: 23,
                },
            },
            _id: 4,
            _parent: Some(
                2,
            ),
        },
        GenericType(
            GenericType {
                children: [
                    AstNodeId {
                        id: 6,
                        _marker: PhantomData<ast_python::generated::Identifier_TypeParameter>,
                    },
                    AstNodeId {
                        id: 7,
                        _marker: PhantomData<ast_python::generated::Identifier_TypeParameter>,
                    },
                ],
                _range: Range {
                    start_byte: 14,
                    end_byte: 24,
                    start_point: Point {
                        row: 1,
                        column: 13,
                    },
                    end_point: Point {
                        row: 1,
                        column: 23,
                    },
                },
                _id: 5,
                _parent: Some(
                    4,
                ),
            },
        ),
        Identifier(
            Identifier {
                _range: Range {
                    start_byte: 14,
                    end_byte: 18,
                    start_point: Point {
                        row: 1,
                        column: 13,
                    },
                    end_point: Point {
                        row: 1,
                        column: 17,
                    },
                },
                _id: 6,
                _parent: Some(
                    5,
                ),
            },
        ),
        TypeParameter(
            TypeParameter {
                children: [
                    AstNodeId {
                        id: 8,
                        _marker: PhantomData<ast_python::generated::Type>,
                    },
                ],
                _range: Range {
                    start_byte: 18,
                    end_byte: 24,
                    start_point: Point {
                        row: 1,
                        column: 17,
                    },
                    end_point: Point {
                        row: 1,
                        column: 23,
                    },
                },
                _id: 7,
                _parent: Some(
                    5,
                ),
            },
        ),
        Type {
            children: AstNodeId {
                id: 9,
                _marker: PhantomData<ast_python::generated::ConstrainedType_Expression_GenericType_MemberType_SplatType_UnionType>,
            },
            _range: Range {
                start_byte: 19,
                end_byte: 23,
                start_point: Point {
                    row: 1,
                    column: 18,
                },
                end_point: Point {
                    row: 1,
                    column: 22,
                },
            },
            _id: 8,
            _parent: Some(
                7,
            ),
        },
        Expression(
            PrimaryExpression(
                Identifier(
                    Identifier {
                        _range: Range {
                            start_byte: 19,
                            end_byte: 23,
                            start_point: Point {
                                row: 1,
                                column: 18,
                            },
                            end_point: Point {
                                row: 1,
                                column: 22,
                            },
                        },
                        _id: 9,
                        _parent: Some(
                            8,
                        ),
                    },
                ),
            ),
        ),
        Expression(
            PrimaryExpression(
                List(
                    List {
                        children: [],
                        _range: Range {
                            start_byte: 27,
                            end_byte: 29,
                            start_point: Point {
                                row: 1,
                                column: 26,
                            },
                            end_point: Point {
                                row: 1,
                                column: 28,
                            },
                        },
                        _id: 10,
                        _parent: Some(
                            2,
                        ),
                    },
                ),
            ),
        ),
    ],
}
